--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -1,39 +1,27 @@
-body::before {
+body {
   background: url(https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/03/01/20220301112534.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-attachment: fixed;
   background-position: 50% 50%;
-  content: " ";
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -2;
+  background-size: 100% 100%;
+  background-size: cover;
 }
-//body {
-//  background:url(https://cdn.jsdelivr.net/gh/swimminghao/picture@main/img/2022/03/01/20220301112534.jpg);
-//  background-repeat: no-repeat;
-//  background-attachment:fixed;
-//  background-position:50% 50%;
-//  background-size:100% 100%;
-//}
-
-
 // 文章主体透明度
 .main-inner{
-  opacity: 0.8;
+  opacity: 0.9;
 }
-// 放置头像等的边栏透明度
+
+
+//// 放置头像等的边栏透明度
 //.sidebar{
-//  opacity: 0.8;
+//  opacity: 0.7;
 //}
 //// 标题等头部透明度
 //.header-inner{
 //  opacity: 0.7;
 //}
-// 底部透明度
-.footer-inner{
-  color:black;
-  opacity: 0.8;
-}
+//// 底部透明度
+//.footer-inner{
+//  color:black;
+//  opacity: 0.7;
+//}
